# qtparted

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Make.rules  Makefile.am  Makefile.dist  TODO  acinclude.m4  aclocal.m4  config.h.in  configure.ac  qtparted.lsm  subdirs
admin/: Doxyfile.global  acinclude.m4.in  config.pl  cvs.sh  doxygen.sh
data/: .cvsignore  Makefile.am  qtparted.desktop  qtparted.xpm  run_qtparted.in
debian/: changelog  control  copyright  docs  files  menu  qtparted.manpages  qtparted.substvars  rules
doc/: DEVELOPER-FAQ  Makefile.am  README  README.Debian  TODO.txt  qtparted.1  run_qtparted.1
redhat/: .cvsignore  qtparted-embedded.spec.in  qtparted-x11.spec.in
src/: .cvsignore  CMakeLists.txt  Makefile.am  debug.cpp  debug.h  icons.qrc  main.cpp  qp_actlist.cpp  qp_actlist.h  qp_combospin.cpp  qp_combospin.h  qp_common.cpp  qp_common.h  qp_debug.cpp  qp_devlist.cpp  qp_devlist.h  qp_diskview.cpp  qp_diskview.h  qp_dlgabout.cpp  qp_dlgabout.h  qp_dlgconfig.cpp  qp_dlgconfig.h  qp_dlgcreate.cpp  qp_dlgcreate.h  qp_dlgdevprop.cpp  qp_dlgdevprop.h  qp_dlgformat.cpp  qp_dlgformat.h  qp_dlgprogress.cpp  qp_dlgprogress.h  qp_dlgresize.cpp  qp_dlgresize.h  qp_drivelist.cpp  qp_drivelist.h  qp_extended.cpp  qp_extended.h  qp_exttools.cpp  qp_exttools.h  qp_filesystem.cpp  qp_filesystem.h  (+39 more)
ts/: .cvsignore  CMakeLists.txt  Makefile.am  qtparted_ca.ts  qtparted_cs.ts  qtparted_de.ts  qtparted_es.ts  qtparted_fi.ts  qtparted_fr.ts  qtparted_it.ts  qtparted_pl.ts  qtparted_ru.ts  qtparted_sv.ts  qtparted_ua.ts
