project(QtParted)
cmake_minimum_required(VERSION 2.8)
set(qt_min_version "4.5.0")
find_package(Qt4 REQUIRED)
include(${QT_USE_FILE})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src)
add_definitions(-DDATADIR=\"${CMAKE_INSTALL_PREFIX}/share/qtparted\")
add_definitions(-DVERSION=\"0.5.0-alpha1\")
add_subdirectory(data)
add_subdirectory(src)
