cmake_minimum_required(VERSION 2.8.11)
project(QtParted)
set(CMAKE_AUTOMOC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Widgets)
find_package(Qt5LinguistTools)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/src ${Qt5Core_INCLUDE_DIRS} ${Qt5Gui_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS})
option(QT_RPATH "Link to Qt with RPATH (e.g. to make sure we're called with Qt/Embedded vs. Qt/X11)" OFF)
if(QT_RPATH)
	set(CMAKE_SKIP_RPATH FALSE)
	set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
endif()
add_definitions(-DDATADIR=\"${CMAKE_INSTALL_PREFIX}/share/qtparted\")
add_definitions(-DVERSION=\"0.7.0\")
add_subdirectory(data)
add_subdirectory(src)
add_subdirectory(ts)
